--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,9 @@
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
+<% if user_signed_in? %>
+  <p>Signed in as <%= current_user.email %></p>
+  <%= link_to 'Sign Out', destroy_user_session_path, data: { turbo_method: :delete }, class: 'btn btn-secondary' %>
+<% else %>
+  <%= link_to 'Sign In', new_user_session_path, class: 'btn btn-primary' %>
+  <%= link_to 'Sign Up', new_user_registration_path, class: 'btn btn-outline-primary' %>
+<% end %>
