--- a/app/views/pharmacy/menu.html.erb
+++ b/app/views/pharmacy/menu.html.erb
@@ -1,7 +1,7 @@
 <!-- app/views/pharmacy/menu.html.erb -->
 <div class="container mt-4">
 
-  <!-- Top Bar -->
+  <!-- Header and Add Button -->
   <div class="d-flex justify-content-between align-items-center mb-4">
     <h1 class="text-primary">My Pharmacy Menu</h1>
     <%= link_to new_pharmacy_item_path, class: 'btn btn-success d-flex align-items-center' do %>
@@ -9,7 +9,7 @@
     <% end %>
   </div>
 
-  <!-- Alphabet Navigation Bar -->
+  <!-- Alphabet Bar -->
   <div class="d-flex flex-wrap justify-content-center mb-4 bg-light p-3 rounded shadow-sm">
     <% ('A'..'Z').each do |letter| %>
       <%= link_to letter, "#letter-#{letter}", class: "btn btn-outline-primary m-1 px-3" %>
@@ -24,6 +24,7 @@
     </div>
   <% end %>
 
+  <!-- Sample Medications (grouped by letter) -->
   <% grouped_meds = [
       { name: "Aspirin", description: "Pain reliever", price: 5.99, image: "aspirin.jpg" },
       { name: "Benadryl", description: "Allergy medication", price: 7.50, image: "benadryl.jpg" },
@@ -32,10 +33,11 @@
       { name: "Erythromycin", description: "Antibiotic", price: 11.50, image: "erythro.jpg" }
     ].group_by { |m| m[:name][0].upcase } %>
 
+  <!-- Medication Grid -->
   <% ('A'..'Z').each do |letter| %>
     <% if grouped_meds[letter] %>
       <h3 id="letter-<%= letter %>" class="text-secondary mb-3 mt-5 border-bottom pb-2"><%= letter %></h3>
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4">
+      <div class="row row-cols-1 row-cols-sm-1 row-cols-md-2 g-4">
         <% grouped_meds[letter].each do |medication| %>
           <div class="col">
             <div class="card h-100 shadow-sm border-primary">
@@ -65,7 +67,7 @@
     <% end %>
   <% end %>
 
-  <!-- Discount Cards -->
+  <!-- Discount Offers -->
   <div class="row mt-5">
     <div class="col-md-6">
       <div class="card border-success shadow-sm">
