--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
 <head>
   <title>MedFly</title>
   <%= csrf_meta_tags %>
-  <%= stylesheet_link_tag 'application', media: 'all' %>
+  <%= stylesheet_link_tag "application", media: "all" %>
   <%= javascript_include_tag 'application', defer: true %>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
