--- a/app/views/pharmacies/index.html.erb
+++ b/app/views/pharmacies/index.html.erb
@@ -1,8 +1,21 @@
-<%= render "shared/navbar" %>
-
 <h1>Pharmacies Near You</h1>
 
-<h2><%= pluralize(@pharmacies.count, "Result") %></h2>
+<!-- 🚀 Added city search form below the heading -->
+<div class="search-bar">
+  <img src="https://www.iconpacks.net/icons/2/free-location-icon-2955-thumb.png" alt="Location" class="location-icon" />
+  <%= form_with url: pharmacies_path, method: :get, local: true, html: { class: "search-form" } do %>
+    <%= text_field_tag :search, params[:search], placeholder: "Enter city...", class: "search-input" %>
+    <%= submit_tag "Search", class: "search-btn" %>
+  <% end %>
+</div>
+
+
+
+
+<!-- ✅ Added notice for when no pharmacies are found -->
+<% if @pharmacies.empty? %>
+  <p>No pharmacies found in this area. Please try another city.</p>
+<% end %>
 
 <div class="pharmacy-grid">
   <% @pharmacies.each do |pharmacy| %>
