--- a/app/views/pharmacies/show.html.erb
+++ b/app/views/pharmacies/show.html.erb
@@ -1,1 +1,14 @@
-<%= link_to "Write a Review", new_pharmacy_review_path(@pharmacy), class: "btn" %>
+<h1><%= @pharmacy.name %></h1>
+<h2>Products</h2>
+<% if @products.any? %>
+  <ul>
+    <% @products.each do |product| %>
+      <li>
+        <strong><%= product.name %></strong><br>
+        Description: <%= product.description %>
+      </li>
+    <% end %>
+  </ul>
+<% else %>
+  <p>No products available for this pharmacy.</p>
+<% end %>
