--- a/app/views/pharmacies/show.html.erb
+++ b/app/views/pharmacies/show.html.erb
@@ -15,12 +15,9 @@
       <% @products.each do |product| %>
         <div class="col d-flex">
           <div class="card shadow-sm w-100">
-            <% if product.photo.attached? %>
-              <%= image_tag product.photo, class: "card-img-top", alt: product.name %>
-            <% else %>
-              <img src="https://via.placeholder.com/300x200/87CEEB/ffffff?text=No+Image" class="card-img-top" alt="No image">
-            <% end %>
-
+            <div class="card-image">
+            <%= cl_image_tag product.images.first.key, height: 300, width: 400, crop: :fill %>
+          </div>
             <div class="card-body d-flex flex-column text-center">
               <h5 class="card-title text-primary"><%= product.name %></h5>
               <% if product.price.present? %>
