--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,12 @@
+
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://unpkg.com/@phosphor-icons/web"></script>
+  <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
+</head>
+
 <!-- Wrap top-header and hero inside .top-section -->
 <div class="top-section">
-  <!-- Top bar with logo and user icon -->
-  <header class="top-header">
-    <img src="<%= asset_path('medfly_logo.jpg') %>" alt="MedFly Logo" class="logo">
-    <div class="user-icon"></div>
-  </header>
-
   <!-- Homepage Hero Section -->
   <section class="hero">
     <h1>MedFly – Fast Relief <br> Right to Your Door</h1>
@@ -25,13 +26,42 @@
 </div>
 
 
-<div class="carousel">
-  <div class="carousel-track">
-    <div class="carousel-slide">Slide 1</div>
-    <div class="carousel-slide">Slide 2</div>
-    <div class="carousel-slide">Slide 3</div>
+<div id="bannerCarousel" class="carousel slide" data-bs-ride="carousel" >
+  <div class="carousel-inner">
+    <div class="carousel-item active" data-bs-interval="3000">
+      <%= image_tag "Picture1-medfly.png", class: "d-block w-100", alt: "Slide 1" %>
+    </div>
+    <div class="carousel-item" data-bs-interval="3000">
+      <%= image_tag "Picture2.png", class: "d-block w-100", alt: "Slide 2" %>
+    </div>
   </div>
-  <button class="carousel-btn prev">‹</button>
-  <button class="carousel-btn next">›</button>
+
+  <button class="carousel-control-prev" type="button" data-bs-target="#bannerCarousel" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#bannerCarousel" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
 </div>
+
+<nav class="bottom-navbar">
+  <a href="/" class="nav-item">
+    <i class="ph ph-house-simple ph-bold"></i>
+    <span>Home</span>
+  </a>
+  <a href="/pharmacies" class="nav-item">
+    <i class="ph ph-magnifying-glass ph-bold"></i>
+    <span>Search</span>
+  </a>
+  <a href="/favourites" class="nav-item">
+    <i class="ph ph-heart ph-bold"></i>
+    <span>Favourites</span>
+  </a>
+  <a href="users/my_account" class="nav-item">
+    <i class="ph ph-user-circle ph-bold"></i>
+    <span>Profile</span>
+  </a>
+</nav>
 
