--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,3 @@
-
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://unpkg.com/@phosphor-icons/web"></script>
-  <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
-</head>
-
 <!-- Wrap top-header and hero inside .top-section -->
 <div class="top-section">
   <!-- Homepage Hero Section -->
@@ -25,27 +18,27 @@
 </section>
 </div>
 
+<div class="h-100 d-flex flex-column justify-content-center">
+  <div id="bannerCarousel" class="carousel slide" data-bs-ride="carousel" >
+    <div class="carousel-inner">
+      <div class="carousel-item active" data-bs-interval="3000">
+        <%= image_tag "Picture1-medfly.png", class: "d-block w-100", alt: "Slide 1" %>
+      </div>
+      <div class="carousel-item" data-bs-interval="3000">
+        <%= image_tag "Picture2.png", class: "d-block w-100", alt: "Slide 2" %>
+      </div>
+    </div>
 
-<div id="bannerCarousel" class="carousel slide" data-bs-ride="carousel" >
-  <div class="carousel-inner">
-    <div class="carousel-item active" data-bs-interval="3000">
-      <%= image_tag "Picture1-medfly.png", class: "d-block w-100", alt: "Slide 1" %>
-    </div>
-    <div class="carousel-item" data-bs-interval="3000">
-      <%= image_tag "Picture2.png", class: "d-block w-100", alt: "Slide 2" %>
-    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#bannerCarousel" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#bannerCarousel" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
   </div>
-
-  <button class="carousel-control-prev" type="button" data-bs-target="#bannerCarousel" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#bannerCarousel" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
 </div>
-
 <nav class="bottom-navbar">
   <a href="/" class="nav-item">
     <i class="ph ph-house-simple ph-bold"></i>
