--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
 <div class="top-section">
   <!-- Homepage Hero Section -->
   <section class="hero">
-    <h1>MedFly – Fast Relief <br> Right to Your Door</h1>
+    <h1>MedFly - Fast Relief <br> Right to Your Door</h1>
 
     <!-- 🚀 Search bar added to the homepage! -->
     <div class="search-bar">
