--- a/app/views/pharmacist/dashboard/index.html.erb
+++ b/app/views/pharmacist/dashboard/index.html.erb
@@ -1,3 +1,4 @@
+<%= render "shared/bottom_navbar" %>
 <h1>Pharmacist Dashboard</h1>
 <p>Welcome, <%= current_user.name %>!</p>
 <%= link_to "+ Add New Pharmacy", new_pharmacist_pharmacy_path, class: "btn btn-primary" %>
