--- a/app/views/pharmacist/pharmacies/new.html.erb
+++ b/app/views/pharmacist/pharmacies/new.html.erb
@@ -1,3 +1,4 @@
+<%= render "shared/bottom_navbar" %>
 <head>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
 </head>
