--- a/app/views/shared/_bottom_navbar.html.erb
+++ b/app/views/shared/_bottom_navbar.html.erb
@@ -9,12 +9,12 @@
     <span>Search</span>
   <% end %>
 
-  <%= link_to favorites_path, class: "nav-item" do %>
+  <%= link_to favourites_path, class: "nav-item" do %>
     <i class="ph ph-heart ph-bold"></i>
-    <span>Favorites</span>
+    <span>Favourites</span>
   <% end %>
 
-  <%= link_to profile_path, class: "nav-item" do %>
+  <%= link_to my_account_path, class: "nav-item" do %>
     <i class="ph ph-user-circle ph-bold"></i>
     <span>Profile</span>
   <% end %>
