--- a/app/assets/stylesheets/components/_bottom-navbar.scss
+++ b/app/assets/stylesheets/components/_bottom-navbar.scss
@@ -22,8 +22,13 @@
   flex: 1;
   text-align: center;
   text-decoration: none;
-  color: #000000;
-  font-size: 12px;
+  color: #222; /* Slightly darker for better contrast */
+  font-size: 1.1rem; /* Slightly larger text */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0.5rem 0;
 }
 
 .bottom-navbar a:hover {
@@ -31,8 +36,7 @@
 }
 
 .bottom-navbar i {
-  font-size: 22px;
+  font-size: 1.6rem; /* Increased icon size for better visibility */
   margin-bottom: 4px;
-  color: #000; /* Black */
-
+  color: #222; /* Match text color */
 }
