--- a/app/views/pharmacies/index.html.erb
+++ b/app/views/pharmacies/index.html.erb
@@ -17,13 +17,12 @@
 <% else %>
 
 
-
-
 <h1>Pharmacies Near You</h1>
 <h2><%= pluralize(@pharmacies.count, "Result") %></h2>
 
 <div class="pharmacy-grid">
   <% @pharmacies.each do |pharmacy| %>
+    <%= link_to pharmacy_path(pharmacy) do  %>
     <div class="pharmacy-card" id="pharmacy-card-<%= pharmacy.id %>">
       <div class="card-image">
          <%= cl_image_tag pharmacy.images.first.key, height: 300, width: 400, crop: :fill %>
@@ -43,33 +42,10 @@
         <p class="pharmacy-description">
           <%= pharmacy.description.truncate(90) %>
         </p>
-
-        <div class="pharmacy-actions">
-          <%= link_to "Continue", pharmacy_path(pharmacy), class: "continue-btn" %>
-          <button class="review-btn" data-pharmacy-id="<%= pharmacy.id %>">Write a Review</button>
-        </div>
       </div>
-    </div>
-
-    <!-- Modal -->
-    <div id="review-modal-<%= pharmacy.id %>" class="modal" style="display: none;">
-      <div class="modal-content">
-        <span class="close" data-pharmacy-id="<%= pharmacy.id %>">&times;</span>
-        <h3>Leave a Review for <%= pharmacy.name %></h3>
-
-        <%= form_with(model: [pharmacy, pharmacy.reviews.new], remote: true, html: { class: 'review-form js-review-form', data: { pharmacy_id: pharmacy.id }, id: "review-form-#{pharmacy.id}" }) do |form| %>
-          <div class="star-rating">
-            <% 5.times do |i| %>
-              <%= radio_button_tag :rating, i + 1, false, id: "star#{pharmacy.id}-#{i + 1}", name: "review[rating]" %>
-              <%= label_tag "star#{pharmacy.id}-#{i + 1}", "★", class: "star" %>
-            <% end %>
-          </div>
-          <%= form.text_area :description, placeholder: "Write your review..." %><br>
-          <%= form.submit "Submit Review" %>
-        <% end %>
-      </div>
-
+      <% end %>
   <% end %>
+</div>
 <% end %>
 
 
