--- a/app/views/shared/_bottom_navbar.html.erb
+++ b/app/views/shared/_bottom_navbar.html.erb
@@ -11,6 +11,7 @@
 
   <%= link_to favourites_path, class: "nav-item" do %>
     <i class="ph ph-heart ph-bold"></i>
+    <span>Favourites</span>
   <% end %>
 
   <%= link_to my_account_path, class: "nav-item" do %>
