--- a/app/views/pharmacies/show.html.erb
+++ b/app/views/pharmacies/show.html.erb
@@ -8,39 +8,7 @@
   </div>
 
   <div class="text-center mb-4">
-
-      <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@getbootstrap">Write a review</button>
-
-      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Leave a review</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-
-
-            <%= simple_form_for [@pharmacy, @pharmacy.reviews.new], html: { class: 'review-form js-review-form', data: { pharmacy_id: @pharmacy.id }, id: "review-form-#{@pharmacy.id}" } do |f| %>
-                <div class="star-rating">
-                  <% 5.times do |i| %>
-                    <%= radio_button_tag :rating, i + 1, false, id: "star#{@pharmacy.id}-#{i + 1}", name: "review[rating]" %>
-                    <%= label_tag "star#{@pharmacy.id}-#{i + 1}", "★", class: "star" %>
-                  <% end %>
-                </div>
-                <%= f.input :description, label_html: { class: "col-form-label" }, placeholder: "Write your review..." %><br>
-
-
-            </div>
-            <div class="modal-footer">
-              <%= f.submit "Submit Review", class: "btn btn-primary"%>
-            </div>
-            <% end %>
-          </div>
-        </div>
-      </div>
-
-
+    <%= link_to 'Write a review' ,  new_pharmacy_review_path(@pharmacy) %>
   </div>
   <nav>
     <div class="nav nav-tabs" id="nav-tab" role="tablist">
@@ -69,11 +37,7 @@
 
                   <% # Find price from pharmacy_products for this pharmacy and product %>
                   <% pharmacy_product = PharmacyProduct.find_by(pharmacy_id: @pharmacy.id, product_id: product.id) %>
-                  <% if pharmacy_product.present? %>
-                    <p class="card-text text-muted">Price: £<%= number_with_precision(pharmacy_product.price, precision: 2) %></p>
-                  <% else %>
-                    <p class="card-text text-muted">Price: Not available</p>
-                  <% end %>
+
 
                   <p class="card-text"><%= product.description %></p>
 
@@ -101,18 +65,17 @@
           No products available for this pharmacy.
         </div>
       <% end %>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> end %>
     </div>
     <div class="tab-pane fade" id="nav-reviews" role="tabpanel" aria-labelledby="nav-reviews-tab">
-        <% if @pharmacy.reviews.empty? %>
-          <div class="alert alert-info text-center mt-4">
-            No reviews yet. Be the first to leave a review!
-          </div>
-        <% else %>
-      <%  @pharmacy.reviews.each do |review| %>
-           <p> <%= review.rating %> stars</p>
-           <p><%= review.description %></p>
-        <% end %>
+          <% if @pharmacy.reviews.empty? %>
+            <div class="alert alert-info text-center mt-4">
+              No reviews yet. Be the first to leave a review!
+            </div>
+          <% else %>
+              <%  @pharmacy.reviews.each do |review| %>
+              <p> <%= review.rating %> stars</p>
+              <p><%= review.description %></p>
+          <% end %>
       <% end %>
     </div>
   </div>
