--- a/app/assets/stylesheets/components/_bottom-navbar.scss
+++ b/app/assets/stylesheets/components/_bottom-navbar.scss
@@ -6,11 +6,12 @@
   left: 0;
   width: 100vw; /* Ensure full width */
   height: 64px;
-  background: linear-gradient(to top, #72a2ae, #b7d4dc);
+  background: linear-gradient(to top, #8c91ec, #d4e1e4);
+  // background: linear-gradient(to top, #faf79e, #f6d9d9);
   display: flex;
   justify-content: space-around;
   align-items: center;
-  z-index: 10;
+  z-index: 1000;
   border-top: 1px solid #d0e2e5;
   border-radius: 20px 20px 0 0;
   box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.05);
